--- a/production.yml
+++ b/production.yml
@@ -31,7 +31,7 @@ services:
       - production_postgres_data:/var/lib/postgresql/data
       - production_postgres_data_backups:/backups
     env_file:
-      - ./.envs/.production/.postgres
+      - ./.env
 
   redis:
     image: redis:5.0
