--- a/production.yml
+++ b/production.yml
@@ -10,6 +10,7 @@ services:
       context: .
       dockerfile: ./compose/production/django/Dockerfile
     image: signmob_production_django
+    restart: unless-stopped
     depends_on:
       - postgres
       - redis
@@ -27,6 +28,7 @@ services:
       context: .
       dockerfile: ./compose/production/postgres/Dockerfile
     image: signmob_production_postgres
+    restart: unless-stopped
     volumes:
       - production_postgres_data:/var/lib/postgresql/data
       - production_postgres_data_backups:/backups
@@ -35,22 +37,26 @@ services:
 
   redis:
     image: redis:5.0
+    restart: unless-stopped
 
   celeryworker:
     <<: *django
     image: signmob_production_celeryworker
+    restart: unless-stopped
     command: /start-celeryworker
     ports: []
 
   celerybeat:
     <<: *django
     image: signmob_production_celerybeat
+    restart: unless-stopped
     command: /start-celerybeat
     ports: []
 
   flower:
     <<: *django
     image: signmob_production_flower
+    restart: unless-stopped
     ports:
       - "127.0.0.1:5555:5555"
     command: /start-flower
